# raizen

./: .env.example  .gitignore  MAPEAMENTO_PROJETO.md  README.md  check_base_data.py  check_city_missing.py  check_dataset_uc.py  check_id_validity.py  check_missing_ceps.py  check_specific_ucs.py  compare_keys.py  config.yaml  debug_columns.py  debug_join_keys.py  debug_pdf.py  diagnose_addresses.py  extracao-termos.xlsx  final_check_summary.py  find_validation_file.py  gen_report.py  get_cols.py  inspect_base.py  inspect_col_k.py  inspect_new_errors.py  inspect_xlsx.py  list_base_cols.py  list_columns.py  logs  print_cols_main.py  pyproject.toml  requirements.txt  save_maps.py  search_base_uc.py  test_corrections.py  test_extractor.py  verify_dv_final.py
.agent/: PROJECT_STRUCTURE.md
.agent/examples/: regex_patterns.md
.agent/rules/: projeto_raizen.md
config/: extraction_patterns.yaml  patterns.yaml  settings.yaml
credentials/: raizen-document-ai-485113-24a338e39908.json
docs/: Agent.md  BASE DE CLIENTES - Raizen.xlsx  CPFL Extraction Validation.md  DOCUMENTACAO_COMPLETA_CPFL.md  DOCUMENTACAO_IDENTIFICACAO_DISTRIBUIDORAS.md  ERROS CADASTRO RZ 1.xlsx  ERROS cadastros RAIZEN.xlsx  ERROS_COM_ENDERECO_FINAL_V4.xlsx  ERROS_COM_ENDERECO_FINAL_V5.xlsx  MASTER_PLAN_v3.md  Melhorar Identificação de Modelos_Atualmente, os P.md  Melhores Práticas Python para Validação de CEP e E.md  PLANO_EXTRACAO_CONTRATOS.md  PLANO_MAPEAMENTO_GEMINI.md  Review Extraction Pipeline Log.md  chat_log_extracao.md  confiabilidade.md  erros_preenchidos_api.py  implementation_guide.md  melhorias_cpfl.md  pdf_fingerprint.md
extrator_contratos/: __init__.py  extractor.py  main.py  patterns.py  table_extractor.py  validators.py
maps/: 01_TERMO_ADESAO_09p_aviso_fidel.json  02_TERMO_ADESAO_11p_fidel_numcl_numin.json  03_SOLAR_09p_aviso_fidel.json  05_TERMO_ADESAO_09p_aviso_fidel_numin.json  11_TERMO_ADESAO_05p_aviso_fidel_numcl.json  12_TERMO_ADESAO_10p_fidel.json  13_TERMO_ADESAO_09p_aviso_fidel_numcl.json  14_SOLAR_05p_aviso_fidel_numcl.json  15_TERMO_ADESAO_10p_aviso_fidel_numcl_numin.json  16_SOLAR_10p_aviso_fidel_numcl_numin.json  17_TERMO_ADESAO_11p_COMPLETO.json  18_REEMISSAO_13p_fidel.json  20_SOLAR_13p_fidel.json  22_TERMO_ADESAO_10p_numin.json  23_SOLAR_12p_fidel.json  25_SOLAR_14p_fidel.json  26_SOLAR_11p_aviso_fidel_numcl_numin.json  27_TERMO_ADESAO_10p_fidel_numin.json  28_TERMO_ADESAO_10p_aviso.json  29_SOLAR_10p_aviso_fidel.json  30_SOLAR_11p_fidel_numin.json  31_REEMISSAO_11p_fidel.json  42_TERMO_ADESAO_08p_aviso_fidel.json  43_SOLAR_13p_fidel_numin.json  44_REEMISSAO_05p_aviso_fidel_numcl.json  45_TERMO_ADESAO_12p_fidel_numin.json  46_TERMO_ADESAO_12p_COMPLETO.json  47_SOLAR_06p_aviso_fidel_numcl.json  48_SOLAR_08p_fidel.json  49_SOLAR_10p_aviso_fidel_numin.json  50_SOLAR_16p_fidel_numin.json  51_REEMISSAO_10p_aviso_fidel_numcl_numin.json  52_ADITIVO_05p_aviso_fidel_numcl.json  53_ADITIVO_06p_aviso_fidel.json  54_ADITIVO_06p_fidel_numcl_numin.json  55_ADITIVO_11p_aviso_fidel.json  56_TERMO_ADESAO_11p_aviso_fidel_numcl_numin.json  57_TERMO_ADESAO_12p_fidel_numcl_numin.json  58_TERMO_ADESAO_12p_fidel.json  60_SOLAR_08p_fidel_numin.json  (+63 more)
output/: comparison_report.md  fingerprint_cache.json  golden_set_100.json  golden_set_100_ai.json  golden_set_100_docai.json  golden_set_500.json  pdf_models_db.json
scripts/: analisar_baixa_confianca.py  analisar_csv.py  analyze_data_coverage.py  analyze_distribuidora.py  analyze_empty_results.py  analyze_empty_samples.py  analyze_empty_v2.py  analyze_multi_uc.py  analyze_parciais_detail.py  analyze_partial_extractions.py  analyze_pdf_gemini.py  apply_map.py  apply_patch_dataset.py  audit_cpfl_data.py  classificar_documentos.py  cleanup_onedrive_duplicates.py  cluster_failures.py  cluster_final.py  cluster_for_gemini.py  cluster_leva3.py  compile_final_dataset.py  create_gemini_batches.py  create_golden_set.py  detect_models.py  distribution_analysis.json  enrich_cpfl_advanced.py  enrichment_logger.py  export_samples.py  extracao_inteligente.py  extract_all_contracts.py  extract_by_folder.py  extract_full.py  extract_parallel.py  fast_inspect.py  fill_golden_set_docai.py  generate_csv.py  generate_mapping_prompts.py  gerar_amostra_validacao.py  inspect_empty_sample.py  inspect_excel.py  (+24 more)
tests/: __init__.py  test_corrections.py  test_distributor_rules.py  test_embracon.py  test_extractor.py  test_fingerprint.py  test_fortbras.py  test_maps.py  test_oi.py  test_oi2.py  test_oi_instalacoes.py  test_organizer.py  test_pymupdf_migration.py  test_regression.py
(+173 files in other folders)
