[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raizen-power-extractor"
version = "2.0.0"
description = "Sistema para extração automatizada de dados de contratos PDF para CSV"
readme = "README.md"
license = {text = "Proprietary - Raízen"}
requires-python = ">=3.9"
authors = [
    {name = "Raízen", email = "ti@raizen.com"}
]
keywords = ["pdf", "extractor", "contracts", "raizen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "pymupdf>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
raizen-extractor = "raizen_power.core.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/raizen_power"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
