[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raizen-power-extractor"
version = "2.0.0"
description = "Sistema para extração automatizada de dados de contratos PDF para CSV"
readme = "README.md"
license = {text = "Proprietary - Raízen"}
requires-python = ">=3.9"
authors = [
    {name = "Raízen", email = "ti@raizen.com"}
]
keywords = ["pdf", "extractor", "contracts", "raizen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    # Core - mínimo para funcionar
    "pandas>=2.0.0",
    "pymupdf>=1.24.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Performance - monitoramento de memória
performance = [
    "psutil>=5.9.0",
]

# Visual - fingerprinting de PDFs
visual = [
    "imagehash>=4.3.0",
    "Pillow>=10.0.0",
]

# OCR - fallback para PDFs escaneados
ocr = [
    "easyocr>=1.7.0",
]

# Gemini - geração de mapas via IA
gemini = [
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
]

# Full - todas as funcionalidades
full = [
    "psutil>=5.9.0",
    "imagehash>=4.3.0",
    "Pillow>=10.0.0",
    "easyocr>=1.7.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
]

# Dev - testes
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
raizen-extractor = "raizen_power.core.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/raizen_power"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
